Solved text overflow issues. Increased mobile friendliness

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -2,6 +2,7 @@ $accent-fg: #fff;
 $accent-bg: #048;
 $accent-bg-light: #26a;
 $accent-bg-lighter: #48c;
+$accent: 210;
 
 $default-font: apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 
@@ -166,19 +167,10 @@ body {
         background: $odd-bg;
         padding: 10px;
         width: 100%;
+        max-width: 100%;
+        height: 60px;
         display: flex;
         align-items: center;
-
-        display: grid;
-        grid-template-columns: 120px auto 120px;
-
-        & > * {
-            width: max-content;
-        }
-        & > *:last-child {
-            display: flex;
-            justify-self: flex-end;
-        }
     }
 
     .item:nth-child(even) {
@@ -193,18 +185,47 @@ body {
     }
 
     .post {
-        .post-title {
-            font-size: 1rem;
-            color: $accent-fg;
-            color: $accent-bg;
-            word-break: break-all;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+
+        &:hover {
+            text-decoration: none;
+            background: #ccc;
         }
 
+        .post-date {
+            min-width: 100px;
+        }
+        .post-title {
+            font-size: 1rem;
+            color: $accent-bg;
+            word-break: break-all;
+
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
         .post-author {
             font-size: 1rem;
-            color: $accent-bg-light;
             opacity: .9;
-            padding-left: 5px;
+            min-width: 120px;
+            max-width: 120px;
+            margin-left: auto;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            
+            p {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+            
+            a {
+                color: $accent-bg-light;
+                padding-left: 4px;
+            }
         }
     }
 }
@@ -319,4 +340,49 @@ form {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
+}
+
+@media only screen and (max-width: 768px) {
+    .content {
+        margin: 0;
+    }
+    .header-section {
+        header {
+            flex-direction: column;
+        }
+        nav {
+            flex-direction: column;
+            .flex-separator {
+                display: none;
+            }
+        }
+    }
+
+    .post-list {
+        max-width: 100%;
+
+        .item {
+            height: 100px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+
+            .post-date {
+                order: 3;
+            }
+            .post-title {
+                order: 1;
+                max-width: 100%;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+            .post-author {
+                order: 2;
+                margin: 0;
+                justify-content: flex-start;
+            }
+        }
+    }
 }
